--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hello world!
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <title>Hello!</title>
+</head>
+
+<body>
+  Hello World!!!
+</body>
+</html>
